--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,11 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 URL: https://github.com/mightymetrika/mmirestriktor
 BugReports: https://github.com/mightymetrika/mmirestriktor/issues
+Imports: 
+    MASS,
+    readr,
+    restriktor,
+    shiny
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
