--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ URL: https://github.com/mightymetrika/mmirestriktor
 BugReports: https://github.com/mightymetrika/mmirestriktor/issues
 Imports: 
     MASS,
+    mmcards,
     restriktor,
     shiny
 Suggests: 
