game UI; function documentation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ Imports:
     MASS,
     mmcards,
     restriktor,
-    shiny
+    shiny,
+    shinythemes
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
