--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,24 +1,24 @@
 Package: mmirestriktor
-Title: Informative Hypothesis Testing Web Applications and Tools
+Title: Informative Hypothesis Testing Web Applications
 Version: 0.0.0.9000
 Authors@R: c(
     person("Mackson", "Ncube", , "macksonncube.stats@gmail.com", role = c("aut", "cre")),
     person("mightymetrika, LLC", role = c("cph", "fnd"))
   )
-Description: Informative hypothesis testing allows researchers to explicitly
-    model their expectations regarding the relationships among parameters,
-    offering enhanced statistical power compared to traditional methods. An
-    important software tool for informative hypothesis testing is 'restriktor'.
-    The 'mmirestriktor' package provides 'shiny' web applications to implement
-    some of the basic functionality of the 'restriktor' package; moreover,
-    'mmirestriktor' provides development tools for building 'shiny' web
-    applications on top of the 'restriktor' informative hypothesis testing
-    capabilities. The mmirestriktor() function launches a shiny web application
-    for fitting and analyzing models with constraints. The FbarCards() function
-    launches a 'shiny' application for a card game designed to build intuition
-    about informative hypothesis testing. The iht_interpreter() function helps
-    interpret informative hypothesis testing results based on guidelines
-    presented in Vanbrabant and Rosseel (2020) <doi:10.4324/9780429273872-14>.
+Description: Offering enhanced statistical power compared to traditional methods,
+    informative hypothesis testing allows researchers to explicitly model their
+    expectations regarding the relationships among parameters. An important
+    software tool for this framework is 'restriktor'. The 'mmirestriktor' package
+    provides 'shiny' web applications to implement some basic functionality of
+    'restriktor'; moreover, 'mmirestriktor' includes development tools for
+    building custom 'shiny' applications using 'restriktor'. The mmirestriktor()
+    function launches a 'shiny' application for fitting and analyzing models with
+    constraints. The FbarCards() function launches a card game application to
+    build intuition about informative hypothesis testing. The iht_interpreter()
+    helps interpret informative hypothesis testing results based on guidelines
+    in Vanbrabant and Rosseel (2020) <doi:10.4324/9780429273872-14>. Overall,
+    'mmirestriktor' facilitates leveraging the capabilities of 'restriktor' for
+    informative hypothesis testing via interactive web applications.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
