draft documentation and unit tests for replext

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,15 @@ export(FbarCards)
 export(d_eq_spaced)
 export(deal_cards_to_grid)
 export(generate_datasets)
+export(generate_datasets_reg)
 export(iht_interpreter)
+export(lr_pow)
 export(mmir_model)
 export(mmirestriktor)
 export(mui)
+export(pj_pow)
+export(replext)
+export(replext_t1_c1)
+export(replext_t2_c1)
 export(rm_interpreter)
+export(sim_reg)
